<resources>
    <string name="app_name">Instamart</string>
    <string name="login_title">Welcome Back</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_prompt">Don\'t have an account?</string>
    <string name="signup_action">Sign Up</string>
    <string name="nav_login_button">Login</string>
    <string name="social_login_label">Or login with</string>
    <string name="btn_google">Google</string>
    <string name="btn_facebook">Facebook</string>
    <string name="error_enter_email_password">Please enter email and password</string>
    <string name="msg_login_clicked">Login clicked</string>
    <string name="msg_forgot_password_clicked">Forgot Password clicked</string>
    <string name="msg_google_login_clicked">Google Login clicked</string>
    <string name="msg_facebook_login_clicked">Facebook Login clicked</string>
    <string name="msg_navigate_signup">Navigate to Signup</string>
    <string name="greeting_text">Hello World!</string>
</resources>